test/compile_fail/token_aliased_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.Error.TokenAliased;
}
